Info overlay translated

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -52,6 +52,72 @@
     "suggester-strategy-maximal": "Maximal diversity",
     "suggester-error": "Error: the pizza list is missing diets that people in your group have.",
     "suggester-suggestion-total": "Total",
-    "suggester-apply": "Apply suggestion"
+    "suggester-apply": "Apply suggestion",
+
+    "info-title": "<bold>Welcome to <title /> ! </bold>",
+    "info-intro-p1": "This little website is a tool to plan your pizza party.",
+    "info-intro-p2": "More specifically, it will help you choose the right amount of specific diet pizzas for your guests.",
+    "info-intro-p3": "For instance, imagine you want to create a buffet of pizza for <pink>7 persons</pink>, one of them is <green>vegetarian</green>, 2 are <blue>pesco-vegetarian</blue> and one is <orange>vegan</orange>, and the last 3 eats meat (I will call them <red>omnivorous</red> for simplicity).",
+    "info-intro-p4": "<bold>How much of which pizza should you order?</bold>",
+    "info-intro-p5": "One might make the assumption that you can order <red>3 pizzas with meat</red>, <blue>two with fish</blue>, <green>one vegetarian</green> and <orange>one vegan</orange>. But one would be <bold>wrong!</bold>",
+
+    "info-theorem-p1": "Introducing the completely made-up theorem:",
+    "info-theorem-title": "The theorem of everyone loves the 4 cheese",
+    "info-theorem-p2": "That's right! One very common choice for a <green>vegetarian</green> pizza is the 4 cheese, but <red>omnivorous</red> and <blue>pesco-vegetarian</blue> will eat a bit of that too.",
+    "info-theorem-p3": "Once the most permissive pizzas in terms of diet are depleted, the remaining slices will be exclusive to the most permissive diets. Leaving restrictive diets behind.",
+    "info-theorem-p4": "One might have already noted that, in such circumstances, even one single pizza with meat will give advantage to <red>omnivorous</red> people. One is right, but this problem can be greatly mitigated. We'll see how.",
+
+    "info-how-title": "But how can this website help me plan a great pizza party?",
+    "info-how-p1": "The website is divided in 3 distincts panels:",
+    "info-how-l1": "<bold>The People Panel:</bold> This panel lets you configure the diets of your guests",
+    "info-how-l2": "<bold>The Pizza Panel:</bold> This panel lets you choose which pizza you want to order",
+    "info-how-l3": "<bold>The Result Panel:</bold> This panel give you insights on your plan and help you decide",
+    "info-how-p2": "We will cover them one by one.",
+
+    "info-people-title": "The People Panel",
+    "info-people-p1": "In this panel, you will find four counters that represent how much of each diet will be at your party.",
+    "info-people-l1": "<normalIcon/> Represents <red>omnivorous</red> people",
+    "info-people-l2": "<pescoVegetarianIcon/> Represents <blue>pesco-vegetarian</blue> people",
+    "info-people-l3": "<vegetarianIcon/> Represents <green>vegetarian</green> people",
+    "info-people-l4": "<veganIcon/> Represents <orange>vegan</orange> people",
+    "info-people-p2": "You can both use the <minusButton /> or <plusButton /> button to change the value or you can directly edit the number with the keyboard.",
+    "info-people-p3": "At the bottom of the list you can see the total number of people.",
+
+    "info-pizza-title": "The Pizza Panel",
+    "info-pizza-p1": "In this panel you will find a table of pizzas described by their quantity, name, diet and price. At the bottom of the table is a form to add new pizzas to the list.",
+    "info-pizza-p2": "In here you can put what you plan to order, since the quantity can be 0 you can also add the whole menu of the pizzeria you are ordering from and only then choose which one you want.",
+    "info-pizza-p3": "Let's take a quick look at the diet selector of the form.",
+    "info-pizza-p4": "You can click the symbols to tell how permissive the pizza is. Or click once to focus it and press <leftArrowKey /> or <rightArrowKey /> to control it.",
+    "info-pizza-l1": "<normalIcon /> Represents pizza with meat that can therefore only be eaten by <red>omnivorous</red> people",
+    "info-pizza-l2": "<pescoVegetarianIcon /> Represents pizza with fish that can be eaten by <red>omnivorous</red> and <blue>pesco-vegetarian</blue> people",
+    "info-pizza-l3": "<vegetarianIcon /> Represents pizza with cheese or egg that can be eaten by everybody except <orange>vegan</orange> people",
+    "info-pizza-l4": "<veganIcon /> Represents <orange>vegan</orange> pizza that can be eaten by everybody",
+    "info-pizza-p5": "In the form you can press <tabKey /> to go to the next field.",
+    "info-pizza-p6": "When done filling the fields, you can press <enterKey /> or click <addButton /> to add the pizza.",
+    "info-pizza-p7": "If you make a mistake, you can edit the pizzas. To do that there is either a button <editButton /> on the right or you can double click any field.",
+    "info-pizza-p8": " Once in edit mode you can edit all fields, you can validate by clicking the <validateButton /> button or pressing <enterKey />, or you can cancel by clicking the <cancelButton /> button or pressing <escapeKey />.",
+    "info-pizza-p9": "You can also delete pizzas by clicking on the <deleteButton /> button on the right.",
+    "info-pizza-p10": "Once you have your pizza setup, you can choose the quantity on the left by hovering it and using the same controls as for the amount of people.",
+
+    "info-result-title": "The Result Panel",
+    "info-result-p1": "In this panel you will find insights about your plan. More specifically you will find how much pizza per person you have, how much money per person it will cost. And most importantly, whether every diet will have a fair share of the pizzas or not.",
+    "info-result-p2": "The cost and pizza quantity are represented on the right like this:",
+    "info-result-p3": "The slices is the exact number of slices per person, the pizza is an approximation with understandable numbers (1/2, 1/4, 7/8) of what it represents.",
+    "info-result-p4": "The fairness for every diet is represented by flag giving qualitative results like this:",
+    "info-result-flag1": "This flag means that vegetarians eat exactly as much as the diet that eats the most.",
+    "info-result-flag2": "This flag means that the diet that eats the most eats less that 125% what vegetarians eat.",
+    "info-result-flag3": "This flag means that the diet that eats the most eats less that 150% what vegetarians eat.",
+    "info-result-flag4": "This flag means that the diet that eats the most eats more that 150% what vegetarians eat.",
+    "info-result-flag5": "This flag means that there is nothing to eat for vegetarians.",
+    "info-result-flag6": "This flag means that there is no vegetarians in the party.",
+    "info-result-p5": "Overall you should aim for every diet marked as <green>Good</green>, <sky>Perfect</sky> is unattainable unless you take only pizzas that everyone can eat.",
+    "info-result-p6": "On the result panel there are also two element that you can expand:",
+    "info-result-p7": "The details panel shows you what to expect in terms of reparition of the food. With numbers this time. There are further explanation available by clicking the <infoIcon /> next to the table.",
+    "info-result-p8": "The params panel allow you to choose in how many slices each pizza have.",
+
+    "info-thanks-title": "Conclusion",
+    "info-thanks-p1": "Thanks for using Pizza Party Maker, have a nice Pizza Party!",
+
+    "info-footer": "Created by Bertrand Baudeur"
   }
 }
