--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -51,6 +51,72 @@
     "suggester-strategy-maximal": "Diversité maximale",
     "suggester-error": "Erreur: votre liste de pizza ne permet pas à tous les invités de manger.",
     "suggester-suggestion-total": "Total",
-    "suggester-apply": "Appliquer la suggestion"
+    "suggester-apply": "Appliquer la suggestion",
+
+    "info-title": "<bold>Bienvenue sur <title /> ! </bold>",
+    "info-intro-p1": "Ce petit site web est un outil pour planifier vos soirées pizza.",
+    "info-intro-p2": "Plus précisément, il va vous aider à choisir le bonne quantité de pizza de chaque régime alimentaire pour satisfaire tous vos invités.",
+    "info-intro-p3": "Par exemple, imaginez que vous souhaitiez créer un buffet de pizza pour <pink>7 personnes</pink>, l'une d'entre elle est <green>vegetarienne</green>, 2 autres sont <blue>pesco-vegetariennes</blue>, une autre est <orange>végane</orange>, et les trois dernières mangent de la viande (Elles seront appelées <red>omnivores</red> par simplicité).",
+    "info-intro-p4": "<bold>Combien de chaque pizza devriez vous commander ?</bold>",
+    "info-intro-p5": "Vous pourriez supposer que <red>3 pizzas avec de la viande</red>, <blue>deux avec du poisson</blue>, <green>une végétarienne</green> et <orange>une végane</orange>. mais vous auriez <bold>tort !</bold>",
+
+    "info-theorem-p1": "Je vous présente mon théorème fait de toute pièce :",
+    "info-theorem-title": "Le théorème de \"Tout le monde aime la 4 fromages\"",
+    "info-theorem-p2": "En effet ! Un choix très courant pour une pizza <green>vegetarienne</green> est la 4 fromages, mais les <red>omnivores</red> et les <blue>pesco-vegetariens</blue> vont aussi en manger.",
+    "info-theorem-p3": "Une fois que les pizza les plus permissives d'un point de vue du régime alimentaire seront complètement mangées, les parts restantes seront exclusivement mangées par les régimes les plus permissifs. Lésant ainsi les régimes restrictifs.",
+    "info-theorem-p4": "Vous avez peut être déjà compris que, dans ces circonstances, ne serait-ce qu'une seule pizza vec de la viande avantagera les <red>omnivores</red>. Vous avez raison, mais ce problème peut être largement atténué. Ce site vous montrera comment.",
+
+    "info-how-title": "Comment ce site va-t-il m'aider à planifier un super soirée pizza ?",
+    "info-how-p1": "Le site est divisé en trois panneaux distincts :",
+    "info-how-l1": "<bold>Le Panneau Invités :</bold> Ce panneau vous permet de renseigner les régimes des vos invités.",
+    "info-how-l2": "<bold>Le Panneau Pizzas :</bold> Ce panneau vous permet de renseigner quelles pizza vous comptez commander.",
+    "info-how-l3": "<bold>Le Panneau Résultats :</bold> Ce panneau vous donnes des retours et des détails sur votre plan et vous aide à décider quoi prendre.",
+    "info-how-p2": "La suite détaille chaque panneau.",
+
+    "info-people-title": "Le Panneau Invités",
+    "info-people-p1": "Dans ce panneau, vous trouverez 4 compteurs qui représentent combien de personne par régime alimentaire seront présente à votre soirée.",
+    "info-people-l1": "<normalIcon/> Représente les <red>omnivores</red>.",
+    "info-people-l2": "<pescoVegetarianIcon/> Représente les <blue>pesco-vegetariens</blue>.",
+    "info-people-l3": "<vegetarianIcon/> Représente les <green>vegetariens</green>.",
+    "info-people-l4": "<veganIcon/> Représente les <orange>végans</orange>.",
+    "info-people-p2": "Vous pouvez utiliser le bouton <minusButton /> ou <plusButton /> pour changer la valeur ou vous pouvez taper directement la valeur.",
+    "info-people-p3": "En bas du panneau, le nombre total d'invité est affiché.",
+
+    "info-pizza-title": "Le Panneau Pizzas",
+    "info-pizza-p1": "Dans ce panneau vous trouverez un tableau de pizza décrites par leur nom, quantité, régime et prix. En bas du panneau se trouve un formulaire pour en ajouter.",
+    "info-pizza-p2": "Ici vous pouvez renseigner ce que vous comptez commander, étant donné que la quantité peut être nulle, vous pouvez aussi renseigner toutes les pizza de la carte de votre pizzeria et après seulement choisir celles que vous comptez commander.",
+    "info-pizza-p3": "Jetons un coup œil rapide au sélecteur de régime du formulaire.",
+    "info-pizza-p4": "Vous pouvez cliquer sur les icones directement ou utiliser <leftArrowKey /> ou <rightArrowKey /> pour changer le régime de la pizza.",
+    "info-pizza-l1": "<normalIcon /> Représente une pizza avec de la viande qui ne peut donc être mangé que par les <red>omnivores</red>.",
+    "info-pizza-l2": "<pescoVegetarianIcon /> Représente une pizza avec du poisson qui peut être mangé par les <red>omnivores</red> et les <blue>pesco-vegetariens</blue>.",
+    "info-pizza-l3": "<vegetarianIcon /> Représente une pizza avec du fromage ou des oeufs qui peuvent être mangé par tout le monde sauf les <orange>végans</orange>.",
+    "info-pizza-l4": "<veganIcon /> Représente une pizza <orange>végane</orange> qui peut être mangé par tout le monde.",
+    "info-pizza-p5": "Dans le formulaire, utilisez la touche <tabKey /> pour aller vers le champ suivant.",
+    "info-pizza-p6": "Lorsque tous les champs sont remplis, vous pouvez utiliser la touche <enterKey /> ou cliquer sur le bouton <addButton /> pour ajouter la pizza à la liste.",
+    "info-pizza-p7": "Si par mégarde vous vous seriez trompé sur les information saisies vous pouvez utiliser le bouton <editButton /> qui apparaît sur la droite au survol de la pizza, ou double cliquer sur n'importe quel champ pour éditer la pizza.",
+    "info-pizza-p8": "Une fois vos modification effectuées, vous pouvez valider vos changement en cliquant sur le bouton <validateButton /> ou en appuyant sur <enterKey />, vous pouvez aussi les annuler en cliquant sur le bouton <cancelButton /> ou en appuyant sur <escapeKey />.",
+    "info-pizza-p9": "Vous pouvez aussi supprimer une pizza en cliquant sur le bouton <deleteButton /> qui apparaît sur la droite au survol de la pizza.",
+    "info-pizza-p10": "Une fois votre pizza correctement ajoutée, vous pouvez en changer la quantité en survolant la pizza et en changeant la valeur de la colonne quantité.",
+
+    "info-result-title": "Le Panneau Résultat",
+    "info-result-p1": "Dans ce panneau, vous trouverez des retours de votre futur commande. Plus précisément, vous trouverez combien de pizza par personnes il y a, combien cela va coûter par personnes. Et le plus important, à quel point chaque régime aura droit à une portion équitable des pizzas.",
+    "info-result-p2": "Le prix et la quantité de pizza est représenté sur la droite de cette manière :",
+    "info-result-p3": "Les parts donne le nombre exact de part par personnes, la quantité de pizza est une approximation arrondi à un nombre compréhensible (1/2, 1/4, 7/8).",
+    "info-result-p4": "L'équité pour chaque régime est représenté par des indicateurs et donne une évaluation qualitative comme suit :",
+    "info-result-flag1": "Cet indicateur signifie que les végétariens mangent exactement la même quantité que le régime qui mange le plus.",
+    "info-result-flag2": "Cet indicateur indique que le régime qui mange le plus mange moins de 125% ce que les végétariens mangent.",
+    "info-result-flag3": "Cet indicateur indique que le régime qui mange le plus mange moins de 150% ce que les végétariens mangent.",
+    "info-result-flag4": "Cet indicateur indique que le régime qui mange le plus mange plus de 150% ce que les végétariens mangent.",
+    "info-result-flag5": "Cet indicateur signifie que les végétariens n'ont rien à manger.",
+    "info-result-flag6": "Cet indicateur signifie qu'il n'y a pas de végétariens parmis vos invités.",
+    "info-result-p5": "En général, vous devriez viser pour avoir tous les régimes marqué comme <green>Bien</green>, <sky>Parfait</sky> est assez inatteignable sauf si vous prenez uniquement des pizzas que tout le monde peut manger.",
+    "info-result-p6": "Dans le panneau résultat, il y a aussi deux sections qui peuvent être étendues",
+    "info-result-p7": "La section détail montre à quoi s'attendre en terme de répartition des parts de pizza, de manière quantitative cette fois. Vous pouvez cliquer sur l'icône <infoIcon /> dans cette section pour plus d'informations.",
+    "info-result-p8": "La section paramètres permet de configurer le nombre de part par pizzas.",
+
+    "info-thanks-title": "Conclusion",
+    "info-thanks-p1": "Je vous remercie d'avoir visité Pizza Party Maker ! Bonne soirée pizza !",
+
+    "info-footer": "Créé par Bertrand Baudeur"
   }
 }
