All previous translations up to date

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -3,8 +3,8 @@
     "people-panel-title": "Invités",
     "people-panel-total": "Total : {{total}}",
     "diet-icon-omnivorous": "ominvore",
-    "diet-icon-pesco-vegetarian": "pesco‑vegetarien",
-    "diet-icon-vegetarian": "vegetarien",
+    "diet-icon-pesco-vegetarian": "pesco‑végétarien",
+    "diet-icon-vegetarian": "végétarien",
     "diet-icon-vegan": "vegan",
 
     "pizza-table-quantity": "Quantité",
@@ -37,7 +37,7 @@
     "details-average-case-scenario": "Cas moyen",
     "details-best-case-scenario": "Meilleur cas possible",
 
-    "parameters-expand-title": "Paramètres",
+    "parameters-title": "Paramètres",
     "parameters-slices": "Parts par pizzas",
     "parameters-fairness": "Équité",
 
@@ -56,13 +56,13 @@
     "info-title": "<bold>Bienvenue sur <title /> ! </bold>",
     "info-intro-p1": "Ce petit site web est un outil pour planifier vos soirées pizza.",
     "info-intro-p2": "Plus précisément, il va vous aider à choisir le bonne quantité de pizza de chaque régime alimentaire pour satisfaire tous vos invités.",
-    "info-intro-p3": "Par exemple, imaginez que vous souhaitiez créer un buffet de pizza pour <pink>7 personnes</pink>, l'une d'entre elle est <green>vegetarienne</green>, 2 autres sont <blue>pesco-vegetariennes</blue>, une autre est <orange>végane</orange>, et les trois dernières mangent de la viande (Elles seront appelées <red>omnivores</red> par simplicité).",
+    "info-intro-p3": "Par exemple, imaginez que vous souhaitiez créer un buffet de pizza pour <pink>7 personnes</pink>, l'une d'entre elle est <green>végétarienne</green>, 2 autres sont <blue>pesco-végétariennes</blue>, une autre est <orange>végane</orange>, et les trois dernières mangent de la viande (Elles seront appelées <red>omnivores</red> par simplicité).",
     "info-intro-p4": "<bold>Combien de chaque pizza devriez vous commander ?</bold>",
     "info-intro-p5": "Vous pourriez supposer que <red>3 pizzas avec de la viande</red>, <blue>deux avec du poisson</blue>, <green>une végétarienne</green> et <orange>une végane</orange>. mais vous auriez <bold>tort !</bold>",
 
     "info-theorem-p1": "Je vous présente mon théorème fait de toute pièce :",
     "info-theorem-title": "Le théorème de \"Tout le monde aime la 4 fromages\"",
-    "info-theorem-p2": "En effet ! Un choix très courant pour une pizza <green>vegetarienne</green> est la 4 fromages, mais les <red>omnivores</red> et les <blue>pesco-vegetariens</blue> vont aussi en manger.",
+    "info-theorem-p2": "En effet ! Un choix très courant pour une pizza <green>végétarienne</green> est la 4 fromages, mais les <red>omnivores</red> et les <blue>pesco-végétariens</blue> vont aussi en manger.",
     "info-theorem-p3": "Une fois que les pizza les plus permissives d'un point de vue du régime alimentaire seront complètement mangées, les parts restantes seront exclusivement mangées par les régimes les plus permissifs. Lésant ainsi les régimes restrictifs.",
     "info-theorem-p4": "Vous avez peut être déjà compris que, dans ces circonstances, ne serait-ce qu'une seule pizza vec de la viande avantagera les <red>omnivores</red>. Vous avez raison, mais ce problème peut être largement atténué. Ce site vous montrera comment.",
 
@@ -76,32 +76,28 @@
     "info-people-title": "Le Panneau Invités",
     "info-people-p1": "Dans ce panneau, vous trouverez 4 compteurs qui représentent combien de personne par régime alimentaire seront présente à votre soirée.",
     "info-people-l1": "<normalIcon/> Représente les <red>omnivores</red>.",
-    "info-people-l2": "<pescoVegetarianIcon/> Représente les <blue>pesco-vegetariens</blue>.",
-    "info-people-l3": "<vegetarianIcon/> Représente les <green>vegetariens</green>.",
+    "info-people-l2": "<pescoVegetarianIcon/> Représente les <blue>pesco-végétariens</blue>.",
+    "info-people-l3": "<vegetarianIcon/> Représente les <green>végétariens</green>.",
     "info-people-l4": "<veganIcon/> Représente les <orange>végans</orange>.",
-    "info-people-p2": "Vous pouvez utiliser le bouton <minusButton /> ou <plusButton /> pour changer la valeur ou vous pouvez taper directement la valeur.",
     "info-people-p3": "En bas du panneau, le nombre total d'invité est affiché.",
 
     "info-pizza-title": "Le Panneau Pizzas",
     "info-pizza-p1": "Dans ce panneau vous trouverez un tableau de pizza décrites par leur nom, quantité, régime et prix. En bas du panneau se trouve un formulaire pour en ajouter.",
     "info-pizza-p2": "Ici vous pouvez renseigner ce que vous comptez commander, étant donné que la quantité peut être nulle, vous pouvez aussi renseigner toutes les pizza de la carte de votre pizzeria et après seulement choisir celles que vous comptez commander.",
-    "info-pizza-p3": "Jetons un coup œil rapide au sélecteur de régime du formulaire.",
-    "info-pizza-p4": "Vous pouvez cliquer sur les icones directement ou utiliser <leftArrowKey /> ou <rightArrowKey /> pour changer le régime de la pizza.",
-    "info-pizza-l1": "<normalIcon /> Représente une pizza avec de la viande qui ne peut donc être mangé que par les <red>omnivores</red>.",
-    "info-pizza-l2": "<pescoVegetarianIcon /> Représente une pizza avec du poisson qui peut être mangé par les <red>omnivores</red> et les <blue>pesco-vegetariens</blue>.",
-    "info-pizza-l3": "<vegetarianIcon /> Représente une pizza avec du fromage ou des oeufs qui peuvent être mangé par tout le monde sauf les <orange>végans</orange>.",
-    "info-pizza-l4": "<veganIcon /> Représente une pizza <orange>végane</orange> qui peut être mangé par tout le monde.",
-    "info-pizza-p5": "Dans le formulaire, utilisez la touche <tabKey /> pour aller vers le champ suivant.",
-    "info-pizza-p6": "Lorsque tous les champs sont remplis, vous pouvez utiliser la touche <enterKey /> ou cliquer sur le bouton <addButton /> pour ajouter la pizza à la liste.",
-    "info-pizza-p7": "Si par mégarde vous vous seriez trompé sur les information saisies vous pouvez utiliser le bouton <editButton /> qui apparaît sur la droite au survol de la pizza, ou double cliquer sur n'importe quel champ pour éditer la pizza.",
-    "info-pizza-p8": "Une fois vos modification effectuées, vous pouvez valider vos changement en cliquant sur le bouton <validateButton /> ou en appuyant sur <enterKey />, vous pouvez aussi les annuler en cliquant sur le bouton <cancelButton /> ou en appuyant sur <escapeKey />.",
-    "info-pizza-p9": "Vous pouvez aussi supprimer une pizza en cliquant sur le bouton <deleteButton /> qui apparaît sur la droite au survol de la pizza.",
-    "info-pizza-p10": "Une fois votre pizza correctement ajoutée, vous pouvez en changer la quantité en survolant la pizza et en changeant la valeur de la colonne quantité.",
-
+    "info-pizza-p3": "Le régime de la pizza",
+    "info-pizza-p4": "Le régime est représenté par un selecteur qui met en couleur tous les régimes pouvant manger votre pizza.",
+    "info-pizza-l1": "<normalIcon /> : <red>omnivores</red>.",
+    "info-pizza-l2": "<pescoVegetarianIcon /> : <blue>pesco-végétariens</blue>.",
+    "info-pizza-l3": "<vegetarianIcon /> : <green>végétariens</green>.",
+    "info-pizza-l4": "<veganIcon /> : <orange>végane</orange>.",
+    "info-pizza-p5": "Notez qu'il est donc impossible d'indiquer une pizza comme exclusivement vegan, car celle-ci pourra forcément être mangé par des régimes plus permissisfs.",
+    "info-pizza-p6": "Pous pouvez à tout moment modifier ou supprimer une pizza.",
+    "info-pizzeria-p1": "Si vous souhaitez sauvegarder les pizzas que vous avez listées. Vous pouvez le faire grâce aux boutons <saveButton/> ou <saveAsButton/> en haut du panneau.",
+    "info-pizzeria-p2": "Lors de votre prochaine visite, il vous suffira de charger la pizzeria en cliquant sur <pizzeriasButton/>.",
+    
     "info-result-title": "Le Panneau Résultat",
-    "info-result-p1": "Dans ce panneau, vous trouverez des retours de votre futur commande. Plus précisément, vous trouverez combien de pizza par personnes il y a, combien cela va coûter par personnes. Et le plus important, à quel point chaque régime aura droit à une portion équitable des pizzas.",
-    "info-result-p2": "Le prix et la quantité de pizza est représenté sur la droite de cette manière :",
-    "info-result-p3": "Les parts donne le nombre exact de part par personnes, la quantité de pizza est une approximation arrondi à un nombre compréhensible (1/2, 1/4, 7/8).",
+    "info-result-p1": "Dans ce panneau, vous trouverez des informations sur votre futur commande.",
+    "info-result-p2": "Le prix et la quantité de pizza par personne est représenté sur la droite de cette manière :",
     "info-result-p4": "L'équité pour chaque régime est représenté par des indicateurs et donne une évaluation qualitative comme suit :",
     "info-result-flag1": "Cet indicateur signifie que les végétariens mangent exactement la même quantité que le régime qui mange le plus.",
     "info-result-flag2": "Cet indicateur indique que le régime qui mange le plus mange moins de 125% ce que les végétariens mangent.",
@@ -109,14 +105,36 @@
     "info-result-flag4": "Cet indicateur indique que le régime qui mange le plus mange plus de 150% ce que les végétariens mangent.",
     "info-result-flag5": "Cet indicateur signifie que les végétariens n'ont rien à manger.",
     "info-result-flag6": "Cet indicateur signifie qu'il n'y a pas de végétariens parmis vos invités.",
-    "info-result-p5": "En général, vous devriez viser pour avoir tous les régimes marqué comme <green>Bien</green>, <sky>Parfait</sky> est assez inatteignable sauf si vous prenez uniquement des pizzas que tout le monde peut manger.",
-    "info-result-p6": "Dans le panneau résultat, il y a aussi deux sections qui peuvent être étendues",
-    "info-result-p7": "La section détail montre à quoi s'attendre en terme de répartition des parts de pizza, de manière quantitative cette fois. Vous pouvez cliquer sur l'icône <infoIcon /> dans cette section pour plus d'informations.",
-    "info-result-p8": "La section paramètres permet de configurer le nombre de part par pizzas.",
+    "info-result-p5": "(Si ces valeurs seuils ne vous conviennent pas vous pouvez les changer dans les paramètres accessible en cliquant sur l'icone <parametersIcon/> sur la page principale)",
+    "info-result-p6": "Un bon indicateur d'une bonne commande est d'avoir tous les indicateurs au moins à <green>Bien</green>.",
+    "info-result-p7": "La section graphique montre une représentation graphique des proportions de personnes et pizzas.",
+    "info-result-p8": "La section détail montre à quoi s'attendre en terme de répartition des parts de pizza, de manière quantitative cette fois. Vous pouvez cliquer sur l'icône <infoIcon /> dans cette section pour plus d'informations.",
+
+    "info-suggester-title": "Le calculateur de solution",
+    "info-suggester-p1": "Si vous ne parvenez pas à créer une commande juste, vous pouvez utiliser le calculateur de solution.",
+    "info-suggester-p2": "Le calculateur prend en compte vos besoin, à savoir la quantité de pizza, l'équité souhaitée et la diversité de la commande.",
+    "info-suggester-p3": "Le calculateur vous propose alors une solution qui tente de maximiser les pizzas à régime restrictifs sans pénaliser les personnes à régime restrictifs.",
+    "info-suggester-p4": "Vous pouvez ensuite choisir de garder ou de rejeter cette solution.",
 
     "info-thanks-title": "Conclusion",
     "info-thanks-p1": "Je vous remercie d'avoir visité Pizza Party Maker ! Bonne soirée pizza !",
 
-    "info-footer": "Créé par Bertrand Baudeur"
+    "info-footer": "Créé par Bertrand Baudeur",
+
+    "manage-pizzeria-title": "Gérer ou charger des pizzerias",
+    "manage-pizzeria-load-button": "Charger",
+    "manage-pizzeria-button": "Pizzerias",
+    "save-pizzeria-as-title": "Enregistrer la pizzeria sous ...",
+    "save-pizzeria-name-conflict": "Une pizzera porte déjà ce nom, la remplacer ?",
+    "save-pizzeria-override": "Remplacer",
+    "save-pizzeria-name": "Nom",
+    
+    "created-by": "Créé par",
+    "cancel": "Annuler",
+    "plus": "Plus",
+    "minus": "Moins",
+    "new": "Nouveau",
+    "save-as": "Enregistrer sous",
+    "save": "Enregistrer"
   }
 }
