--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -80,29 +80,25 @@
     "info-people-l2": "<pescoVegetarianIcon/> Represents <blue>pesco-vegetarian</blue> people",
     "info-people-l3": "<vegetarianIcon/> Represents <green>vegetarian</green> people",
     "info-people-l4": "<veganIcon/> Represents <orange>vegan</orange> people",
-    "info-people-p2": "You can both use the <minusButton /> or <plusButton /> button to change the value or you can directly edit the number with the keyboard.",
     "info-people-p3": "At the bottom of the list you can see the total number of people.",
 
     "info-pizza-title": "The Pizza Panel",
     "info-pizza-p1": "In this panel you will find a table of pizzas described by their quantity, name, diet and price. At the bottom of the table is a form to add new pizzas to the list.",
     "info-pizza-p2": "In here you can put what you plan to order, since the quantity can be 0 you can also add the whole menu of the pizzeria you are ordering from and only then choose which one you want.",
-    "info-pizza-p3": "Let's take a quick look at the diet selector of the form.",
-    "info-pizza-p4": "You can click the symbols to tell how permissive the pizza is. Or click once to focus it and press <leftArrowKey /> or <rightArrowKey /> to control it.",
-    "info-pizza-l1": "<normalIcon /> Represents pizza with meat that can therefore only be eaten by <red>omnivorous</red> people",
-    "info-pizza-l2": "<pescoVegetarianIcon /> Represents pizza with fish that can be eaten by <red>omnivorous</red> and <blue>pesco-vegetarian</blue> people",
-    "info-pizza-l3": "<vegetarianIcon /> Represents pizza with cheese or egg that can be eaten by everybody except <orange>vegan</orange> people",
-    "info-pizza-l4": "<veganIcon /> Represents <orange>vegan</orange> pizza that can be eaten by everybody",
-    "info-pizza-p5": "In the form you can press <tabKey /> to go to the next field.",
-    "info-pizza-p6": "When done filling the fields, you can press <enterKey /> or click <addButton /> to add the pizza.",
-    "info-pizza-p7": "If you make a mistake, you can edit the pizzas. To do that there is either a button <editButton /> on the right or you can double click any field.",
-    "info-pizza-p8": " Once in edit mode you can edit all fields, you can validate by clicking the <validateButton /> button or pressing <enterKey />, or you can cancel by clicking the <cancelButton /> button or pressing <escapeKey />.",
-    "info-pizza-p9": "You can also delete pizzas by clicking on the <deleteButton /> button on the right.",
-    "info-pizza-p10": "Once you have your pizza setup, you can choose the quantity on the left by hovering it and using the same controls as for the amount of people.",
+    "info-pizza-p3": "The pizza diet",
+    "info-pizza-p4": "The diet of your pizza is represented by a selector which colorize every diet that can eat your pizza.",
+    "info-pizza-l1": "<normalIcon />: <red>omnivorous</red>.",
+    "info-pizza-l2": "<pescoVegetarianIcon />: <blue>pesco-vegetarian</blue>.",
+    "info-pizza-l3": "<vegetarianIcon />: <green>vegetarian</green>.",
+    "info-pizza-l4": "<veganIcon />: <orange>vegan</orange>.",
+    "info-pizza-p5": "Note that it is therefore not possible to make a pizza exclusive to vegan, because in that case it will necessarily be eatable by the most permissive diets.",
+    "info-pizza-p6": "You can always edit or delete a pizza.",
+    "info-pizzeria-p1": "If you want to save the pizzas you just entered. You can do so by clicking either <saveButton/> or <saveAsButton/> at the top of the panel.",
+    "info-pizzeria-p2": "On your next visit, your will be able to load it with the button <pizzeriasButton/>.",
 
     "info-result-title": "The Result Panel",
-    "info-result-p1": "In this panel you will find insights about your plan. More specifically you will find how much pizza per person you have, how much money per person it will cost. And most importantly, whether every diet will have a fair share of the pizzas or not.",
+    "info-result-p1": "In this panel you will find insights about your plan.",
     "info-result-p2": "The cost and pizza quantity are represented on the right like this:",
-    "info-result-p3": "The slices is the exact number of slices per person, the pizza is an approximation with understandable numbers (1/2, 1/4, 7/8) of what it represents.",
     "info-result-p4": "The fairness for every diet is represented by flag giving qualitative results like this:",
     "info-result-flag1": "This flag means that vegetarians eat exactly as much as the diet that eats the most.",
     "info-result-flag2": "This flag means that the diet that eats the most eats less that 125% what vegetarians eat.",
@@ -110,14 +106,36 @@
     "info-result-flag4": "This flag means that the diet that eats the most eats more that 150% what vegetarians eat.",
     "info-result-flag5": "This flag means that there is nothing to eat for vegetarians.",
     "info-result-flag6": "This flag means that there is no vegetarians in the party.",
-    "info-result-p5": "Overall you should aim for every diet marked as <green>Good</green>, <sky>Perfect</sky> is unattainable unless you take only pizzas that everyone can eat.",
-    "info-result-p6": "On the result panel there are also two element that you can expand:",
-    "info-result-p7": "The details panel shows you what to expect in terms of reparition of the food. With numbers this time. There are further explanation available by clicking the <infoIcon /> next to the table.",
-    "info-result-p8": "The params panel allow you to choose in how many slices each pizza have.",
+    "info-result-p5": "(If these thresholds doesn't fit your need, you can change them in the parameters that you can find by clicking the icon <parametersIcon/> on the main page.",
+    "info-result-p6": "A good rule indicator that your order is fair is to have all flag to at least <green>Good</green>.",
+    "info-result-p7": "The graphs panel shows you the proportions of people and pizzas graphically.",
+    "info-result-p8": "The details panel shows you what to expect in terms of reparition of the food. With numbers this time. There are further explanation available by clicking the <infoIcon /> next to the table.",
+
+    "info-suggester-title": "The suggester",
+    "info-suggester-p1": "If you are struggling to find a fair order plan, your can use the suggester.",
+    "info-suggester-p2": "The suggester takes your needs into account, that is, the quantity of pizza, the fairness and the diversity of the order plan.",
+    "info-suggester-p3": "The suggester thens suggests an order that tends to maximize the quantity of restrictive diet pizza whist keeping the order fair for most restrictifs diet people.",
+    "info-suggester-p4": "You can then choose to either keep or discard the suggestion.",
 
     "info-thanks-title": "Conclusion",
     "info-thanks-p1": "Thanks for using Pizza Party Maker, have a nice Pizza Party!",
 
-    "info-footer": "Created by Bertrand Baudeur"
+    "info-footer": "Created by Bertrand Baudeur",
+
+    "manage-pizzeria-title": "Manage or load pizzerias",
+    "manage-pizzeria-load-button": "Load",
+    "manage-pizzeria-button": "Pizzerias",
+    "save-pizzeria-as-title": "Save pizzeria as ...",
+    "save-pizzeria-name-conflict": "A pizzeria with this name already exists, override?",
+    "save-pizzeria-override": "Override",
+    "save-pizzeria-name": "Name",
+
+    "created-by": "Created by",
+    "cancel": "Cancel",
+    "plus": "Plus",
+    "minus": "Minus",
+    "new": "New",
+    "save-as": "Save As",
+    "save": "Save"
   }
 }
