--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -9,7 +9,7 @@
 
     "pizza-table-quantity": "Quantité",
     "pizza-table-name": "Nom",
-    "pizza-table-eaten-by": "Mangé par",
+    "pizza-table-eaten-by": "Mangée par",
     "pizza-table-price": "Prix",
 
     "pizza-form-placeholder": "4 Fromages",
@@ -64,7 +64,7 @@
     "info-theorem-title": "Le théorème de \"Tout le monde aime la 4 fromages\"",
     "info-theorem-p2": "En effet ! Un choix très courant pour une pizza <green>végétarienne</green> est la 4 fromages, mais les <red>omnivores</red> et les <blue>pesco-végétariens</blue> vont aussi en manger.",
     "info-theorem-p3": "Une fois que les pizza les plus permissives d'un point de vue du régime alimentaire seront complètement mangées, les parts restantes seront exclusivement mangées par les régimes les plus permissifs. Lésant ainsi les régimes restrictifs.",
-    "info-theorem-p4": "Vous avez peut être déjà compris que, dans ces circonstances, ne serait-ce qu'une seule pizza vec de la viande avantagera les <red>omnivores</red>. Vous avez raison, mais ce problème peut être largement atténué. Ce site vous montrera comment.",
+    "info-theorem-p4": "Vous avez peut être déjà compris que, dans ces circonstances, ne serait-ce qu'une seule pizza avec de la viande avantagera les <red>omnivores</red>. Vous avez raison, mais ce problème peut être largement atténué. Ce site vous montrera comment.",
 
     "info-how-title": "Comment ce site va-t-il m'aider à planifier un super soirée pizza ?",
     "info-how-p1": "Le site est divisé en trois panneaux distincts :",
@@ -74,7 +74,7 @@
     "info-how-p2": "La suite détaille chaque panneau.",
 
     "info-people-title": "Le Panneau Invités",
-    "info-people-p1": "Dans ce panneau, vous trouverez 4 compteurs qui représentent combien de personne par régime alimentaire seront présente à votre soirée.",
+    "info-people-p1": "Dans ce panneau, vous trouverez 4 compteurs qui représentent combien de personnes par régime alimentaire seront présentes à votre soirée.",
     "info-people-l1": "<normalIcon/> Représente les <red>omnivores</red>.",
     "info-people-l2": "<pescoVegetarianIcon/> Représente les <blue>pesco-végétariens</blue>.",
     "info-people-l3": "<vegetarianIcon/> Représente les <green>végétariens</green>.",
@@ -82,8 +82,8 @@
     "info-people-p3": "En bas du panneau, le nombre total d'invité est affiché.",
 
     "info-pizza-title": "Le Panneau Pizzas",
-    "info-pizza-p1": "Dans ce panneau vous trouverez un tableau de pizza décrites par leur nom, quantité, régime et prix. En bas du panneau se trouve un formulaire pour en ajouter.",
-    "info-pizza-p2": "Ici vous pouvez renseigner ce que vous comptez commander, étant donné que la quantité peut être nulle, vous pouvez aussi renseigner toutes les pizza de la carte de votre pizzeria et après seulement choisir celles que vous comptez commander.",
+    "info-pizza-p1": "Dans ce panneau vous trouverez un tableau de pizzas décrites par leur nom, quantité, régime et prix. En bas du panneau se trouve un formulaire pour en ajouter.",
+    "info-pizza-p2": "Ici vous pouvez renseigner ce que vous comptez commander, étant donné que la quantité peut être de 0, vous pouvez aussi renseigner toutes les pizzas de la carte de votre pizzeria et après seulement choisir celles que vous comptez commander.",
     "info-pizza-p3": "Le régime de la pizza",
     "info-pizza-p4": "Le régime est représenté par un selecteur qui met en couleur tous les régimes pouvant manger votre pizza.",
     "info-pizza-l1": "<normalIcon /> : <red>omnivores</red>.",
@@ -97,23 +97,23 @@
     
     "info-result-title": "Le Panneau Résultat",
     "info-result-p1": "Dans ce panneau, vous trouverez des informations sur votre futur commande.",
-    "info-result-p2": "Le prix et la quantité de pizza par personne est représenté sur la droite de cette manière :",
+    "info-result-p2": "Le prix et la quantité de pizza par personnes est représenté sur la droite de cette manière :",
     "info-result-p4": "L'équité pour chaque régime est représenté par des indicateurs et donne une évaluation qualitative comme suit :",
-    "info-result-flag1": "Cet indicateur signifie que les végétariens mangent exactement la même quantité que le régime qui mange le plus.",
-    "info-result-flag2": "Cet indicateur indique que le régime qui mange le plus mange moins de 125% ce que les végétariens mangent.",
-    "info-result-flag3": "Cet indicateur indique que le régime qui mange le plus mange moins de 150% ce que les végétariens mangent.",
-    "info-result-flag4": "Cet indicateur indique que le régime qui mange le plus mange plus de 150% ce que les végétariens mangent.",
-    "info-result-flag5": "Cet indicateur signifie que les végétariens n'ont rien à manger.",
-    "info-result-flag6": "Cet indicateur signifie qu'il n'y a pas de végétariens parmis vos invités.",
-    "info-result-p5": "(Si ces valeurs seuils ne vous conviennent pas vous pouvez les changer dans les paramètres accessible en cliquant sur l'icone <parametersIcon/> sur la page principale)",
+    "info-result-flag1": "Cet indicateur signifie que les <green>végétariens</green> mangent exactement la même quantité que le régime qui mange le plus.",
+    "info-result-flag2": "Cet indicateur indique que le régime qui mange le plus mange moins de 125% ce que les <green>végétariens</green> mangent.",
+    "info-result-flag3": "Cet indicateur indique que le régime qui mange le plus mange moins de 150% ce que les <green>végétariens</green> mangent.",
+    "info-result-flag4": "Cet indicateur indique que le régime qui mange le plus mange plus de 150% ce que les <green>végétariens</green> mangent.",
+    "info-result-flag5": "Cet indicateur signifie que les <green>végétariens</green> n'ont rien à manger.",
+    "info-result-flag6": "Cet indicateur signifie qu'il n'y a pas de <green>végétariens</green> parmis vos invités.",
+    "info-result-p5": "(Si ces valeurs seuils ne vous conviennent pas vous pouvez les changer dans les paramètres accessibles en cliquant sur l'icône <parametersIcon/> sur la page principale)",
     "info-result-p6": "Un bon indicateur d'une bonne commande est d'avoir tous les indicateurs au moins à <green>Bien</green>.",
-    "info-result-p7": "La section graphique montre une représentation graphique des proportions de personnes et pizzas.",
-    "info-result-p8": "La section détail montre à quoi s'attendre en terme de répartition des parts de pizza, de manière quantitative cette fois. Vous pouvez cliquer sur l'icône <infoIcon /> dans cette section pour plus d'informations.",
+    "info-result-p7": "La section graphiques montre une représentation graphique des proportions de personnes et pizzas.",
+    "info-result-p8": "La section détails montre à quoi s'attendre en terme de répartition des parts de pizza, de manière quantitative cette fois. Vous pouvez cliquer sur l'icône <infoIcon /> dans cette section pour plus d'informations.",
 
     "info-suggester-title": "Le calculateur de solution",
     "info-suggester-p1": "Si vous ne parvenez pas à créer une commande juste, vous pouvez utiliser le calculateur de solution.",
-    "info-suggester-p2": "Le calculateur prend en compte vos besoin, à savoir la quantité de pizza, l'équité souhaitée et la diversité de la commande.",
-    "info-suggester-p3": "Le calculateur vous propose alors une solution qui tente de maximiser les pizzas à régime restrictifs sans pénaliser les personnes à régime restrictifs.",
+    "info-suggester-p2": "Le calculateur prend en compte vos besoins, à savoir la quantité de pizza, l'équité souhaitée et la diversité de la commande.",
+    "info-suggester-p3": "Le calculateur vous propose alors une solution qui tente de maximiser les pizzas à régime restrictif sans pénaliser les personnes à régime restrictif.",
     "info-suggester-p4": "Vous pouvez ensuite choisir de garder ou de rejeter cette solution.",
 
     "info-thanks-title": "Conclusion",
@@ -135,6 +135,29 @@
     "minus": "Moins",
     "new": "Nouveau",
     "save-as": "Enregistrer sous",
-    "save": "Enregistrer"
+    "save": "Enregistrer",
+
+    "details-panel-title": "La section détails",
+    "details-panel-p1": "Cette section montre le méchanisme sous jacent de ce site. Et donne un peu plus d'informations que les indicateurs.",
+    "details-panel-p2": "Cette section montre les résultats des différentes simulations de votre soirée pizza.",
+    "details-panel-p3": "Chaque résultat est présenté sous la forme d'une ligne qui indique combien de part ont été mangées en moyenne par chaque personne de chaque régime, comme suit :",
+    "details-panel-example-case": "Exemple",
+    "details-panel-p4": "Donc ici nous savons que chaque <red>omnivore</red> a mangé 8 parts de pizza, chaque <blue>pesco-végétarien</blue> et <green>végétarien</green> a mangé 6 parts et chaque <orange>vegan</orange> en a mangé 7.",
+    "details-panel-p5": "Il y a 4 scénari différents. Leurs différences sont explicitées ci-dessous.",
+    "details-maths-title": "Comments ces résultats sont ils calculés ?",
+    "details-maths-p1": "Un scénario prend toutes les pizzas et personnes de votre fête et effectue le calcul suivant :",
+    "details-maths-p2": "On procède par vague dans lesquelles chaque personne va prendre une part de pizza. L'ordre de passage et les pizzas visés dépend du scénario.",
+    "details-maths-l1": "Le pire cas possible : les régimes les plus persmissifs vont se concentrer en premier lieu sur les pizzas aux régimes les plus permissifs. Par exemple, les <red>omnivores</red> vont d'abord manger les pizzas <orange>vegan</orange> puis les <green>végétariennes</green>, puis les <blue>pesco-végétariennes</blue> et seulement après ils mangeront les <red>pizzas avec de la viande</red>.",
+    "details-maths-l2": "Le meilleur cas possible : c'est l'inverse du pire cas possible, chaque régime va privilégier en premier lieu les pizzas qui correspondent à son régime.",
+    "details-maths-l3": "Le cas aléatoire : chaque personne va prendre une part au hasard parmis toutes les parts qu'il peut manger.",
+    "details-maths-l4": "Le cas moyen : Celui-ci est simplement le résultat de la moyenne du cas aléatoire répété 100 fois.",
+    "details-maths-p3": "Pour le pire et meilleur cas possible, à chaque vague, les <orange>vegans</orange> commencent, puis les <green>végétariens</green>, puis les <blue>pesco-végétariens</blue>, et enfin les <red>omnivores</red>.",
+    "details-maths-p4": "Ce choix est délibéré, il permet de prendre en compte qu'en réalité, si il y a conflit sur qui de deux personnes peut prendre la dernière part d'une pizza, la personne avec le régime le plus restrictifs aura certainement la priorité (sinon changez d'amis hein :p).",
+    "details-maths-p5": "Dans le cas aléatoire et moyen, l'ordre dans lequel les personnes prennent des parts est aléatoire.",
+    "details-maths-p6": "Les résultats sont tronqués à un chiffre après la virgule, ce qui peut mener à une somme qui diffère du total de parts réel.",
+    "details-flags-title": "Mais donc que représentent les indicateurs ?",
+    "details-flags-p1": "Les indicateurs se basent sur le cas moyen, qui est selon moi, le plus fiable et le plus réaliste.",
+    "details-flags-p2": "L'équité est basé sur le pourcentage de pizza supplémentaire que le régime ayant mangé le plus a eu. Dans notre exemple, les <red>omnivores</red> ont mangé le plus avec 8 parts de pizza chacun, et les <green>végétariens</green> ont mangé 6 parts. Ce qui veut dire que les <red>omnivores</red> ont mangé 33% de pizza en plus que les <green>végétariens</green>.",
+    "details-flags-p3": "L'indicateur est à <sky>Parfait</sky> si ce pourcentage est <strong>exactement 0%</strong>. Il est à <green>Bien</green> si ce pourcentage est <strong>entre 0% et 25%</strong>. Il est à <orange>Moyen</orange> si ce pourcentage est <strong>entre 25% et 50%</strong>. Et à <red>Mauvais</red> si ce pourcentage est <strong>au dessus de 50%</strong>."
   }
 }
