--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -136,6 +136,7 @@
     "new": "Nouveau",
     "save-as": "Enregistrer sous",
     "save": "Enregistrer",
+    "add-pizza": "Ajouter une pizza",
 
     "details-panel-title": "La section détails",
     "details-panel-p1": "Cette section montre le méchanisme sous jacent de ce site. Et donne un peu plus d'informations que les indicateurs.",
