--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,8 @@
     "pizza-table-eaten-by": "Eaten by",
     "pizza-table-price": "Price",
 
+    "pizza-name-unnamed": "Unnamed",
+
     "pizza-form-placeholder": "4 Cheese",
 
     "suggester-open-button": "Struggling to find the right proportions ? Click here",
