--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -12,6 +12,8 @@
     "pizza-table-eaten-by": "Mangée par",
     "pizza-table-price": "Prix",
 
+    "pizza-name-unnamed": "Sans nom",
+
     "pizza-form-placeholder": "4 Fromages",
 
     "suggester-open-button": "Difficile de trouver les bonne proportions ? Cliquez ici",
