--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,7 +1,7 @@
 {
   "translation": {
     "people-panel-title": "Invités",
-    "people-panel-total": "Total : {{total}}",
+    "people-panel-total": "Total : {{total}}",
     "diet-icon-omnivorous": "ominvore",
     "diet-icon-pesco-vegetarian": "pesco‑végétarien",
     "diet-icon-vegetarian": "végétarien",
@@ -16,67 +16,110 @@
 
     "pizza-form-placeholder": "4 Fromages",
 
-    "suggester-open-button": "Suggérer des Pizzas",
-
+    
     "pizza-flag-perfect": "Parfait",
     "pizza-flag-good": "Bien",
     "pizza-flag-okay": "Moyen",
     "pizza-flag-bad": "Mauvais",
     "pizza-flag-cant-eat": "Rien",
-
+    
     "info-display-person": "pers",
     "info-display-total": "total",
     "info-display-slices": "parts",
     "info-display-pizzas": "pizzas",
-
+    
     "graphs-expand-title": "Graphiques",
     "graphs-people": "Invités",
     "graphs-pizza": "Pizzas",
-
+    "graphs-people-description": "Répartition des régimes parmis les invités",
+    "graphs-pizza-description": "Répartition des régimes parmis les pizzas",
+    
     "details-expand-title": "Détails",
     "details-worst-case-scenario": "Pire cas possible",
     "details-random-case-scenario": "Cas aléatoire",
     "details-average-case-scenario": "Cas moyen",
     "details-best-case-scenario": "Meilleur cas possible",
-
+    
     "details-and-graphs": "Détails and graphiques",
-
+    
+    "suggester-open-button": "Suggérer des pizzas",
     "parameters-title": "Paramètres",
     "parameters-slices": "Parts par pizzas",
     "parameters-fairness": "Équité",
+    "parameters-restore-default": "Réstorer les paramètres par défaut",
 
-    "help": "Aide",
+    "help": "Aide",    
+    "created-by": "Créé par",
+    "cancel": "Annuler",
+    "plus": "Plus",
+    "minus": "Moins",
+    "close": "Fermer",
+    "save": "Enregistrer",
+    "delete": "Supprimer",
+    "add-pizza": "Ajouter une pizza",
+    "edit-pizza": "Modifier la pizza {{pizza}}",
+    "delete-pizza": "Supprimer la pizza {{pizza}}",
+    "apply-changes": "Annuler les changements de {{pizza}}",
+    "cancel-changes": "Appliquer les changements de {{pizza}}",
+    "pizza-name": "Nom de la pizza",
+    "pizza-price": "Prix de la pizza {{pizza}}",
+    
+    "quantity-of": "Quantité de {{element}}",
+    "plus-of": "Ajouter un(e) {{element}}",
+    "minus-of": "Retirer un(e) {{element}}",
+    "delete-element": "Supprimer {{element}}",
+    "expand-element": "Étendre {{element}}",
 
+    "pizzeria-name": "Nom de la pizzeria",
+    "exit-pizzeria": "Quitter la pizzeria",
+    "save-as-pizzeria": "Enregister une pizzeria",
+    "edit-pizzeria": "Éditer la pizzeria",
+    "save-pizzeria": "Sauvegarder {{pizzeriaName}}",
+    "load-pizzeria": "Charger {{pizzeriaName}}",
+    "delete-pizzeria": "Supprimer la pizzeria {{pizzeriaName}}",
+    
+    "normal-person": "Personne omnivore",
+    "pescoVegetarian-person": "Personne pesco-végétarienne",
+    "vegetarian-person": "Personne végétarienne",
+    "vegan-person": "Personne vegane",
+
+    "language-selection": "Changer la langue",
+    
     "suggester-popup-title": "Calculateur de suggestion",
     "suggester-description": "Choisissez les paramètres de la suggestion",
-    "suggester-unfairness": "Inéquité :",
-    "suggester-strategy": "Strategie :",
-    "suggester-quantity": "Quantité par personnes :",
+    "suggester-unfairness": "Inéquité :",
+    "suggester-strategy": "Strategie :",
+    "suggester-quantity": "Quantité par personnes :",
     "suggester-compute": "Calculer la suggestion",
     "suggester-strategy-minimal": "Prix minimal",
     "suggester-strategy-maximal": "Diversité maximale",
     "suggester-error": "Erreur: votre liste de pizza ne permet pas à tous les invités de manger.",
     "suggester-suggestion-total": "Total",
     "suggester-apply": "Appliquer la suggestion",
+    "suggester-strategy-selection": "Choisir la stratégie de selection des pizzas",
+    "suggester-strategy-minimal-description": "Choisi systématiquement la pizza la moins cher du régime recherché.",
+    "suggester-strategy-maximal-description": "Choisi un maximum de pizzas différentes, peu importe leur prix.",
+    "suggester-quantity-description": "Choisir la quantité de pizza par personne",
+    "suggester-unfairness-description": "Combien de pizza supplémentaires quelqu'un peut avoir par rapport aux autres.",
 
-    "info-title": "<bold>Bienvenue sur <title /> ! </bold>",
+    "info-title": "<bold>Bienvenue sur <title /> ! </bold>",
     "info-intro-p1": "Ce petit site web est un outil pour planifier vos soirées pizza.",
     "info-intro-p2": "Plus précisément, il va vous aider à choisir le bonne quantité de pizza de chaque régime alimentaire pour satisfaire tous vos invités.",
     "info-intro-p3": "Par exemple, imaginez que vous souhaitiez créer un buffet de pizza pour <pink>7 personnes</pink>, l'une d'entre elle est <green>végétarienne</green>, 2 autres sont <blue>pesco-végétariennes</blue>, une autre est <orange>végane</orange>, et les trois dernières mangent de la viande (Elles seront appelées <red>omnivores</red> par simplicité).",
-    "info-intro-p4": "<bold>Combien de chaque pizza devriez vous commander ?</bold>",
-    "info-intro-p5": "Vous pourriez supposer que <red>3 pizzas avec de la viande</red>, <blue>deux avec du poisson</blue>, <green>une végétarienne</green> et <orange>une végane</orange>. mais vous auriez <bold>tort !</bold>",
+    "info-intro-p4": "<bold>Combien de chaque pizza devriez vous commander ?</bold>",
+    "info-intro-p5": "Vous pourriez supposer que <red>3 pizzas avec de la viande</red>, <blue>deux avec du poisson</blue>, <green>une végétarienne</green> et <orange>une végane</orange>. mais vous auriez <bold>tort !</bold>",
 
-    "info-theorem-p1": "Je vous présente mon théorème fait de toute pièce :",
+    "info-theorem-p1": "Je vous présente mon théorème fait de toute pièce :",
     "info-theorem-title": "Le théorème de \"Tout le monde aime la 4 fromages\"",
-    "info-theorem-p2": "En effet ! Un choix très courant pour une pizza <green>végétarienne</green> est la 4 fromages, mais les <red>omnivores</red> et les <blue>pesco-végétariens</blue> vont aussi en manger.",
+    "info-theorem-p2": "En effet ! Un choix très courant pour une pizza <green>végétarienne</green> est la 4 fromages, mais les <red>omnivores</red> et les <blue>pesco-végétariens</blue> vont aussi en manger.",
     "info-theorem-p3": "Une fois que les pizza les plus permissives d'un point de vue du régime alimentaire seront complètement mangées, les parts restantes seront exclusivement mangées par les régimes les plus permissifs. Lésant ainsi les régimes restrictifs.",
     "info-theorem-p4": "Vous avez peut être déjà compris que, dans ces circonstances, ne serait-ce qu'une seule pizza avec de la viande avantagera les <red>omnivores</red>. Vous avez raison, mais ce problème peut être largement atténué. Ce site vous montrera comment.",
 
-    "info-how-title": "Comment ce site va-t-il m'aider à planifier un super soirée pizza ?",
-    "info-how-p1": "Le site est divisé en trois panneaux distincts :",
-    "info-how-l1": "<bold>Le Panneau Invités :</bold> Ce panneau vous permet de renseigner les régimes des vos invités.",
-    "info-how-l2": "<bold>Le Panneau Pizzas :</bold> Ce panneau vous permet de renseigner quelles pizza vous comptez commander.",
-    "info-how-l3": "<bold>Le Panneau Résultats :</bold> Ce panneau vous donnes des retours et des détails sur votre plan et vous aide à décider quoi prendre.",
+    "info-how-title": "Comment ce site va-t-il m'aider à planifier un super soirée pizza ?",
+    "info-how-p1": "Le site est divisé en trois panneaux distincts :",
+    "info-how-l1": "<bold>Le Panneau Invités :</bold> Ce panneau vous permet de renseigner les régimes des vos invités.",
+    "info-how-l2": "<bold>Le Panneau Pizzas :</bold> Ce panneau vous permet de renseigner quelles pizza vous comptez commander.",
+    "info-how-l3": "<bold>Le Panneau Résultats :</bold> Ce panneau vous donnes des retours et des détails sur votre plan et vous aide à décider quoi prendre.",
     "info-how-p2": "La suite détaille chaque panneau.",
 
     "info-people-title": "Le Panneau Invités",
@@ -92,10 +135,10 @@
     "info-pizza-p2": "Ici vous pouvez renseigner ce que vous comptez commander, étant donné que la quantité peut être de 0, vous pouvez aussi renseigner toutes les pizzas de la carte de votre pizzeria et après seulement choisir celles que vous comptez commander.",
     "info-pizza-p3": "Le régime de la pizza",
     "info-pizza-p4": "Le régime est représenté par un selecteur qui met en couleur tous les régimes pouvant manger votre pizza.",
-    "info-pizza-l1": "<normalIcon /> : <red>omnivores</red>.",
-    "info-pizza-l2": "<pescoVegetarianIcon /> : <blue>pesco-végétariens</blue>.",
-    "info-pizza-l3": "<vegetarianIcon /> : <green>végétariens</green>.",
-    "info-pizza-l4": "<veganIcon /> : <orange>végane</orange>.",
+    "info-pizza-l1": "<normalIcon /> : <red>omnivores</red>.",
+    "info-pizza-l2": "<pescoVegetarianIcon /> : <blue>pesco-végétariens</blue>.",
+    "info-pizza-l3": "<vegetarianIcon /> : <green>végétariens</green>.",
+    "info-pizza-l4": "<veganIcon /> : <orange>végane</orange>.",
     "info-pizza-p5": "Notez qu'il est donc impossible d'indiquer une pizza comme exclusivement vegan, car celle-ci pourra forcément être mangé par des régimes plus permissisfs.",
     "info-pizza-p6": "Pous pouvez à tout moment modifier ou supprimer une pizza.",
     "info-pizzeria-p1": "Si vous souhaitez sauvegarder les pizzas que vous avez listées. Vous pouvez le faire grâce aux boutons <saveButton/> ou <saveAsButton/> en haut du panneau.",
@@ -103,8 +146,8 @@
     
     "info-result-title": "Le Panneau Résultat",
     "info-result-p1": "Dans ce panneau, vous trouverez des informations sur votre futur commande.",
-    "info-result-p2": "Le prix et la quantité de pizza par personnes est représenté sur la droite de cette manière :",
-    "info-result-p4": "L'équité pour chaque régime est représenté par des indicateurs et donne une évaluation qualitative comme suit :",
+    "info-result-p2": "Le prix et la quantité de pizza par personnes est représenté sur la droite de cette manière :",
+    "info-result-p4": "L'équité pour chaque régime est représenté par des indicateurs et donne une évaluation qualitative comme suit :",
     "info-result-flag1": "Cet indicateur signifie que les <green>végétariens</green> mangent exactement la même quantité que le régime qui mange le plus.",
     "info-result-flag2": "Cet indicateur indique que le régime qui mange le plus mange moins de 125% ce que les <green>végétariens</green> mangent.",
     "info-result-flag3": "Cet indicateur indique que le régime qui mange le plus mange moins de 150% ce que les <green>végétariens</green> mangent.",
@@ -124,46 +167,40 @@
     "info-suggester-p4": "Vous pouvez ensuite choisir de garder ou de rejeter cette solution.",
 
     "info-thanks-title": "Conclusion",
-    "info-thanks-p1": "Je vous remercie d'avoir visité Pizza Party Maker ! Bonne soirée pizza !",
+    "info-thanks-p1": "Je vous remercie d'avoir visité Pizza Party Maker ! Bonne soirée pizza !",
 
     "info-footer": "Créé par Bertrand Baudeur",
 
     "manage-pizzeria-title": "Gérer ou charger des pizzerias",
+    "manage-pizzeria-title-short": "Gérer les pizzerias",
     "manage-pizzeria-load-button": "Charger",
     "manage-pizzeria-button": "Pizzerias",
+    "no-pizzas": "Il n'y a aucune pizzas dans cette pizzeria.",
     "save-pizzeria-as-title": "Enregistrer la pizzeria sous ...",
-    "save-pizzeria-name-conflict": "Une pizzera porte déjà ce nom, la remplacer ?",
+    "save-pizzeria-name-conflict": "<pizzeriaName/> existe déjà, la remplacer ?",
+    "save-pizzeria-content-of": "Le contenu de <pizzeriaName/> :",
     "save-pizzeria-override": "Remplacer",
     "save-pizzeria-name": "Nom",
-    
-    "created-by": "Créé par",
-    "cancel": "Annuler",
-    "plus": "Plus",
-    "minus": "Moins",
-    "new": "Nouveau",
-    "save-as": "Enregistrer sous",
-    "save": "Enregistrer",
-    "add-pizza": "Ajouter une pizza",
 
     "details-panel-title": "La section détails",
     "details-panel-p1": "Cette section montre le méchanisme sous jacent de ce site. Et donne un peu plus d'informations que les indicateurs.",
     "details-panel-p2": "Cette section montre les résultats des différentes simulations de votre soirée pizza.",
-    "details-panel-p3": "Chaque résultat est présenté sous la forme d'une ligne qui indique combien de part ont été mangées en moyenne par chaque personne de chaque régime, comme suit :",
+    "details-panel-p3": "Chaque résultat est présenté sous la forme d'une ligne qui indique combien de part ont été mangées en moyenne par chaque personne de chaque régime, comme suit :",
     "details-panel-example-case": "Exemple",
     "details-panel-p4": "Donc ici nous savons que chaque <red>omnivore</red> a mangé 8 parts de pizza, chaque <blue>pesco-végétarien</blue> et <green>végétarien</green> a mangé 6 parts et chaque <orange>vegan</orange> en a mangé 7.",
     "details-panel-p5": "Il y a 4 scénari différents. Leurs différences sont explicitées ci-dessous.",
-    "details-maths-title": "Comments ces résultats sont ils calculés ?",
-    "details-maths-p1": "Un scénario prend toutes les pizzas et personnes de votre fête et effectue le calcul suivant :",
+    "details-maths-title": "Comments ces résultats sont ils calculés ?",
+    "details-maths-p1": "Un scénario prend toutes les pizzas et personnes de votre fête et effectue le calcul suivant :",
     "details-maths-p2": "On procède par vague dans lesquelles chaque personne va prendre une part de pizza. L'ordre de passage et les pizzas visés dépend du scénario.",
-    "details-maths-l1": "Le pire cas possible : les régimes les plus persmissifs vont se concentrer en premier lieu sur les pizzas aux régimes les plus permissifs. Par exemple, les <red>omnivores</red> vont d'abord manger les pizzas <orange>vegan</orange> puis les <green>végétariennes</green>, puis les <blue>pesco-végétariennes</blue> et seulement après ils mangeront les <red>pizzas avec de la viande</red>.",
-    "details-maths-l2": "Le meilleur cas possible : c'est l'inverse du pire cas possible, chaque régime va privilégier en premier lieu les pizzas qui correspondent à son régime.",
-    "details-maths-l3": "Le cas aléatoire : chaque personne va prendre une part au hasard parmis toutes les parts qu'il peut manger.",
-    "details-maths-l4": "Le cas moyen : Celui-ci est simplement le résultat de la moyenne du cas aléatoire répété 100 fois.",
+    "details-maths-l1": "Le pire cas possible : les régimes les plus persmissifs vont se concentrer en premier lieu sur les pizzas aux régimes les plus permissifs. Par exemple, les <red>omnivores</red> vont d'abord manger les pizzas <orange>vegan</orange> puis les <green>végétariennes</green>, puis les <blue>pesco-végétariennes</blue> et seulement après ils mangeront les <red>pizzas avec de la viande</red>.",
+    "details-maths-l2": "Le meilleur cas possible : c'est l'inverse du pire cas possible, chaque régime va privilégier en premier lieu les pizzas qui correspondent à son régime.",
+    "details-maths-l3": "Le cas aléatoire : chaque personne va prendre une part au hasard parmis toutes les parts qu'il peut manger.",
+    "details-maths-l4": "Le cas moyen : Celui-ci est simplement le résultat de la moyenne du cas aléatoire répété 100 fois.",
     "details-maths-p3": "Pour le pire et meilleur cas possible, à chaque vague, les <orange>vegans</orange> commencent, puis les <green>végétariens</green>, puis les <blue>pesco-végétariens</blue>, et enfin les <red>omnivores</red>.",
     "details-maths-p4": "Ce choix est délibéré, il permet de prendre en compte qu'en réalité, si il y a conflit sur qui de deux personnes peut prendre la dernière part d'une pizza, la personne avec le régime le plus restrictifs aura certainement la priorité (sinon changez d'amis hein :p).",
     "details-maths-p5": "Dans le cas aléatoire et moyen, l'ordre dans lequel les personnes prennent des parts est aléatoire.",
     "details-maths-p6": "Les résultats sont tronqués à un chiffre après la virgule, ce qui peut mener à une somme qui diffère du total de parts réel.",
-    "details-flags-title": "Mais donc que représentent les indicateurs ?",
+    "details-flags-title": "Mais donc que représentent les indicateurs ?",
     "details-flags-p1": "Les indicateurs se basent sur le cas moyen, qui est selon moi, le plus fiable et le plus réaliste.",
     "details-flags-p2": "L'équité est basé sur le pourcentage de pizza supplémentaire que le régime ayant mangé le plus a eu. Dans notre exemple, les <red>omnivores</red> ont mangé le plus avec 8 parts de pizza chacun, et les <green>végétariens</green> ont mangé 6 parts. Ce qui veut dire que les <red>omnivores</red> ont mangé 33% de pizza en plus que les <green>végétariens</green>.",
     "details-flags-p3": "L'indicateur est à <sky>Parfait</sky> si ce pourcentage est <strong>exactement 0%</strong>. Il est à <green>Bien</green> si ce pourcentage est <strong>entre 0% et 25%</strong>. Il est à <orange>Moyen</orange> si ce pourcentage est <strong>entre 25% et 50%</strong>. Et à <red>Mauvais</red> si ce pourcentage est <strong>au dessus de 50%</strong>."
